// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpsellBanner UpsellBannerBody variant render matches screenshot 1`] = `
<View
  style={
    {
      "backgroundColor": "#f3f5f9",
      "borderRadius": 8,
      "flexDirection": "row",
      "gap": 8,
      "justifyContent": "space-between",
      "paddingHorizontal": 16,
      "paddingVertical": 12,
    }
  }
>
  <View
    style={
      {
        "alignItems": "flex-start",
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "CentraNo1-Bold",
          "fontSize": 18,
          "fontWeight": "700",
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      you could earn
    </Text>
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#1c7e33",
          "fontFamily": "CentraNo1-Bold",
          "fontSize": 32,
          "fontWeight": "700",
          "letterSpacing": 0,
          "lineHeight": 40,
        }
      }
    >
      $454
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#686e7d",
            "fontFamily": "CentraNo1-Book",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        per year on your tokens
      </Text>
      <TouchableOpacity
        onPress={[MockFunction]}
      >
        <SvgMock
          color="#686e7d"
          height={16}
          name="Info"
          style={
            {
              "height": 16,
              "width": 16,
            }
          }
          width={16}
        />
      </TouchableOpacity>
    </View>
  </View>
  <View
    style={
      {
        "justifyContent": "center",
      }
    }
  >
    <TouchableOpacity
      accessibilityRole="button"
      accessible={true}
      activeOpacity={1}
      onPress={[MockFunction]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "transparent",
          "borderColor": "#4459ff",
          "borderRadius": 20,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 40,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#4459ff",
            "fontFamily": "CentraNo1-Medium",
            "fontSize": 16,
            "fontWeight": "500",
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Earn 4.5%
      </Text>
    </TouchableOpacity>
  </View>
</View>
`;

exports[`UpsellBanner UpsellBannerHeader variant render matches screenshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#f3f5f9",
      "borderRadius": 8,
      "gap": 8,
      "paddingHorizontal": 16,
      "paddingVertical": 24,
    }
  }
>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "CentraNo1-Bold",
        "fontSize": 18,
        "fontWeight": "700",
        "letterSpacing": 0,
        "lineHeight": 24,
      }
    }
  >
    you could earn
  </Text>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#1c7e33",
        "fontFamily": "CentraNo1-Bold",
        "fontSize": 32,
        "fontWeight": "700",
        "letterSpacing": 0,
        "lineHeight": 40,
      }
    }
  >
    $454
  </Text>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#686e7d",
        "fontFamily": "CentraNo1-Book",
        "fontSize": 16,
        "fontWeight": "400",
        "letterSpacing": 0,
        "lineHeight": 24,
      }
    }
  >
    per year on your tokens
  </Text>
  <TouchableOpacity
    accessibilityRole="button"
    accessible={true}
    activeOpacity={1}
    onPress={[MockFunction]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    style={
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "transparent",
        "borderColor": "#4459ff",
        "borderRadius": 20,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 40,
        "justifyContent": "center",
        "paddingHorizontal": 16,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#4459ff",
          "fontFamily": "CentraNo1-Medium",
          "fontSize": 16,
          "fontWeight": "500",
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Earn 4.5%
    </Text>
  </TouchableOpacity>
</View>
`;
